<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GeoStats</string>
    <string name="app_subname">Geographical statictical tables</string>
    <string name="app_about">Show user geographical statistics from social (demography of countries), physical (rivers, mountains, ..), meteorological (rain, hurricane, ..) areas, stats of extraction of mineral resources on Earth, ..</string>
    
    <string name="Name">Name</string>
    <string name="Close">Close</string>
    <string name="NameCountry">Name / Country</string>
    <string name="NameLocation">Name / Location</string>
    <string name="NameSourceYear">Name / Source Year</string>
    <string name="NameDistrict">Name / District</string>
    <string name="LocalGovernmentAreasDistrict">Local government area / District</string>
    <string name="SourceYear">Source Year</string>
    <string name="Year">Year</string>
    <string name="Country">Country</string>
    <string name="Total">Total</string>
    <string name="TotalDensity">Total / Density</string>
    <string name="TotalSqKm">Total sq km</string>
    <string name="TotalSqM">Total sq m</string>
    <string name="TotalKm">Total km</string>
    <string name="TotalM">Total m</string>
    <string name="M3">m3</string>
    <string name="Location">Location</string>
    <string name="TotalLandArea">Total Land Area (sq km)</string>
    <string name="TotalArea">Total Area (sq km)</string>
    <string name="Population">Population</string>
    <string name="Volume">Volume</string>
    <string name="EarthTotalSurface">Earth\'s total surface</string>
    <string name="LandArea">Land Area</string>
    <string name="ContinentShoreline">Continent shoreline (km)</string>
    <string name="Highest">Highest</string>
    <string name="DepthM">Depth m</string>
    <string name="Value">Value</string>
    <string name="Topic">Topic</string>
    <string name="TopicName">Topic / Name</string>
    <string name="PercentOfPopulation">% of population</string>
    <string name="DensitySqKm">density sq km</string>
    <string name="Density">Density</string>
    <string name="Ocean">Ocean</string>
    <string name="Oceans">Oceans</string>
    <string name="World">World</string>
    <string name="Indicators">Indicators</string>
    <string name="Branches">Branches</string>
    <string name="Topics">Topics</string>
    <string name="Exit">Exit</string>
    <string name="Continents">Continents</string>
    <string name="About">About</string>
    <string name="References">References</string>
    <string name="ReferencesU"><u>References</u></string>
    <string name="Countries">Countries</string>
    <string name="Cities">Cities</string>
    <string name="Capitals">Capitals</string>
    <string name="Mountains">Mountains</string>
    <string name="Islands">Islands</string>
    <string name="Rivers">Rivers</string>
    <string name="Lakes">Lakes</string>
    <string name="IndicatorsIntroText">Choose an indicator from the left pane.</string>
    <string name="Deaths">Deaths</string>
    <string name="Bays">Bays</string>
    <string name="Channels">Channels</string>
    <string name="Area">Area (sq km)</string>
    <string name="Magnitude">Magnitude</string>
    <string name="ShowTable"><u>Show table</u></string>
    <string name="BasicInfo">Basic info</string>
    <string name="Maps">Maps</string>
    <string name="Image">Image</string>
    <string name="Bibliography"><u>Bibliography</u></string>
    
    <string name="NumberOfCountries">Number of countries</string>
    <string name="HighestPoint">Highest point (m)</string>
    <string name="LowestPoint">Lowest point (m)</string>
    <string name="TimesAtlas">Times Atlas</string>
    <string name="Wikipedia">Wikipedia</string>
    <string name="Temperature">Temperature</string>
    <string name="HighestTemp">Highest Temprature °C / °F</string>
    <string name="LowestTemp">Lowest Temprature °C / °F</string>
    <string name="GreatestPrec">Greatest Precipitation (average annual) mm</string>
    <string name="LeastPrec">Least Precipitation (average annual) mm</string>
    <string name="LargestPopulation">Largest population</string>
	<string name="SmallestPopulation">Smallest population</string>
	<string name="MostNortherly">Most northerly</string>
	<string name="MostSoutherly">Most southerly</string>
    <string name="LargestCountries">Largest Countries</string>
    <string name="LargestEUCountries">Largest EU Countries</string>
    <string name="MostPopulatedCountries">Most Populated Countries</string>
    <string name="MostPopulatedEUCountries">Most Populated EU Countries</string>
    <string name="CountriesByPopulationDensity">Countries by population density</string>
    <string name="HighestMountains">Highest Mountains</string>
    <string name="LargestIslands">Largest Islands</string>
    <string name="LargestPeninsulas">Largest Peninsulas</string>
    <string name="LongestRivers">Longest Rivers</string>
    <string name="LargestLakes">Largest Lakes</string>
    <string name="DeepestLakes">Deepest Lakes</string>
    <string name="LargestSeas">Largest Seas</string>
    <string name="LargestCities">Largest Cities</string>
    <string name="LargestUrbanAreas">Largest Urban agglomerations</string>
    <string name="OceanCurrents">Ocean currents</string>
    <string name="MajorOceanicTrenches">Major oceanic trenches</string>
    <string name="AverageDepth">Average Depth (m)</string>
    <string name="DeepestPoint">Deepest Point (m)</string>
    <string name="DeadliestEarthquakes">Deadliest Earthquakes</string>
    <string name="LargestEarthquakes">Largest Earthquakes</string>
    <string name="MajorVolcanicEruptions">Major Volcanic Eruptions 1980&#8211;2011</string>
    <string name="WeatherExtremes">Weather Extremes</string>
    <string name="Length">Length</string>
    <string name="Width">Width</string>
    <string name="WidthKm">Width \n(km)</string>
    <string name="NameFlowRate">Name \nFlow rate (m/s)</string>
    <string name="SpeedCmS">Speed \n(cm/s)</string>
    <string name="PhysicalMap">Physical map</string>
    <string name="PoliticalMap">Political map</string>

    <string name="PhysicalGeography">Physical geography</string>
    <string name="PoliticalUrbanGeography">Political and Urban geography</string>
    <string name="EconomicGeography">Economic geography</string>

    <string name="CentralAmPhysical">Central Am. - physical</string>
    <string name="CentralAmer">Central Amer.</string>
    <string name="PoliticalCentralA">Political Central A.</string>
    <string name="MiddleEastPhysical">Middle East - physical</string>
    <string name="MiddleEast">Middle East</string>

    <string name="CoalProduction">Total Primary Coal Production</string>
    <string name="OilProduction">Total Oil Supply</string>
    <string name="NaturalGasProduction">Natural gas production</string>
    <string name="ElectricityProduction">Electricity production</string>
    <string name="SteelProduction">Steel production</string>
    <string name="MotorVehicleProduction">Motor vehicle production</string>
    <string name="WheatProduction">Wheat production</string>
    <string name="RiceProduction">Rice production</string>
    <string name="BeefBuffaloProduction">Beef and Buffalo meat production</string>
    <string name="PigProduction">Pig meat production per capita</string>
    <string name="SheepGoatProduction">Sheep and goat meat production</string>
    <string name="MilkProduction">Milk production</string>
    <string name="MeatProduction">Meat production</string>
    <string name="FishProduction">Capture fish production</string>
    <string name="RoundwoodProduction">Roundwood production</string>
    <string name="GNI">Gross national income</string>
    <string name="GoldProduction">Gold production</string>
    <string name="SilverProduction">Silver production</string>
    <string name="DiamondProduction">Diamond production</string>
    <string name="IronOreProduction">Iron Ore production</string>
    <string name="AluminiumProduction">Aluminium production</string>
    <string name="CopperProduction">Copper production</string>
    <string name="SaltProduction">Salt production</string>
    <string name="MercuryProduction">Mercury production</string>
    <string name="NickelProduction">Nickel production</string>
    <string name="ZincProduction">Zinc production</string>
    <string name="UraniumProduction">Uranium production</string>
    <string name="KaolinProduction">Kaolin production</string>
    
    
    <string name="Chart">Chart</string>
    <string name="CapPpp">per capita, PPP ($)</string>
    <string name="ChartNo">Chart No.</string>
    <string name="ImageNo">Image No.</string>
    <string name="WeatherRecords">Weather records</string>
    <string name="ThousandShortTons">Thousand Short Tons</string>
    <string name="ThousandTonnes">Thousand Tonnes</string>
    <string name="TonneCap">Tonne/cap</string>
    <string name="TonnesMetric">Tonnes (metric)</string>
    <string name="TonnesMetalContent">Tonnes (metal content)</string>
    <string name="Tonnes">Tonnes</string>
    <string name="Carats">Carats</string>
    <string name="Kilograms">Kilograms</string>
    <string name="KilogramsMetalContent">Kg (metal content)</string>
    <string name="ThousandBarrelsDay">Thousand Barrels/Day</string>
    <string name="Bcm">bcm</string>
    <string name="TWh">TWh</string>
    <string name="MilTonCrudeSteel">mil. tonnes crude steel</string>

    <!-- dimens not work, added here in strings - values for layout_weight for fragments -->
    <string name="layoutWeightFragmentA">2</string>
    <string name="layoutWeightFragmentB">8</string>
    <string name="layoutWeightFragmentALand">1.1</string>
    <string name="layoutWeightFragmentBLand">0.9</string>
    <string name="layoutWeightFragmentALarge">3</string>
    <string name="layoutWeightFragmentBLarge">7</string>
    <string name="layoutWeightFragmentALargeLand">4.5</string>
    <string name="layoutWeightFragmentBLargeLand">5.5</string>
    
</resources>
