<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScrollView">

    <TableLayout style="@style/TableLayout"
        android:shrinkColumns="0">
        <TableRow style="@style/TableRow">
            <TextView
                style="@style/TableTextView"
                android:text="@string/NumberOfCountries"/>
            <TextView
                style="@style/TableTextView.GravityRight"
                android:text="@string/NumberOfCountriesRecordAfrica"/>
        </TableRow>
        <TableRow style="@style/TableRow">
            <TextView
                style="@style/TableTextView"
                android:text="@string/LargestCountries"/>
            <Button
                style="@style/TableTextView.GravityRight.Button"
                android:text="@string/ShowTable"
                android:id="@+id/btDialog"/>

        </TableRow>

	</TableLayout>
</ScrollView>