<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/Main" >

    <LinearLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:scrollbarStyle="outsideOverlay"
        style="@style/FrameLayoutBody.Container">
    
        <Button
            android:id="@+id/btPhyG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PhysicalGeography"/>
        <Button
            android:id="@+id/btPolUrbG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PoliticalUrbanGeography"/>
        <Button
            android:id="@+id/btEconG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EconomicGeography"/>

    </LinearLayout>

</RelativeLayout>
