<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScrollView">
    <TableLayout style="@style/TableLayout"
        android:shrinkColumns="0">
        <TableRow style="@style/TableRow">
            <TextView
                style="@style/TableTextView"
                android:text="@string/LargestCities"/>
            <Button
                style="@style/TableTextView.GravityRight.Button"
                android:text="@string/ViewTable"
                android:id="@+id/btDialog2"/>
        </TableRow>
        <TableRow style="@style/TableRow">
            <TextView
                style="@style/TableTextView"
                android:text="@string/LargestUrbanAreas"/>
            <Button
                style="@style/TableTextView.GravityRight.Button"
                android:text="@string/ViewTable"
                android:id="@+id/btDialog3"/>
        </TableRow>
        <TableRow style="@style/TableRow">
            <TextView
                style="@style/TableTextView"
                android:text="@string/Capitals"/>
            <Button
                style="@style/TableTextView.GravityRight.Button"
                android:text="@string/ViewTable"
                android:id="@+id/btDialog4"/>
        </TableRow>
    </TableLayout>
    
</ScrollView>