<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScrollView.NoMargin">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/DialogTitle"
            android:text="@string/Africa"
            android:id="@+id/dTitle"/>

        <TextView
            style="@style/DialogChartNo"
            android:layout_below="@+id/dTitle"
            android:id="@+id/imageNo"
            android:text="@string/ImageNo"/>

        <Button
            style="@style/ButCloseDialog"
            android:id="@+id/btClose"/>

        <Button
            style="@style/FragmentButtons.SmallPadding"
            android:layout_below="@+id/imageNo"
            android:text="@string/PhysicalMap"
            android:id="@+id/btMap1"/>

        <Button
            style="@style/FragmentButtons.SmallPadding"
            android:layout_toRightOf="@+id/btMap1"
            android:layout_below="@+id/imageNo"
            android:text="@string/PoliticalMap"
            android:id="@+id/btMap2"/>

        <ImageView
            android:layout_width="fill_parent"
            android:id="@+id/ivMap"
            android:layout_height="fill_parent"
            android:layout_below="@+id/btMap1"
            android:src="@drawable/map"
            android:scaleType="matrix"
            android:contentDescription="@string/Africa"/>

    </RelativeLayout>
</ScrollView>